--- a/src/Components/Frame/Frame.scss
+++ b/src/Components/Frame/Frame.scss
@@ -9,7 +9,8 @@
 	background: red;
 	justify-content: space-between;
 	align-content: center;
-	padding: 8px;
+	align-items: center;
+	padding: 0 8px;
 
 	h4 {
 		margin: 0;
@@ -21,6 +22,14 @@
 		li {
 			display: inline-block;
 			margin: 0 8px;
+			padding: 8px;
+			transition: background-color 0.3s ease-in-out;
+
+			&:hover {
+				cursor: pointer;
+				background: white;
+				color: black;
+			}
 		}
 	}
 }
