Adding the frame back

--- a/src/Components/Frame/Frame.scss
+++ b/src/Components/Frame/Frame.scss
@@ -6,10 +6,11 @@
 	right: 0;
 	display: flex;
 	width: 100%;
-	background: red;
+	background: rgb(34, 34, 34);
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
+	color: #e6e6e6;
 	padding: 0 8px;
 
 	h4 {
