--- a/src/Stylesheets/App.scss
+++ b/src/Stylesheets/App.scss
@@ -4,6 +4,17 @@
 	box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
+
 body {
 	font-family: 'Noto Sans JP', sans-serif;
+    min-height: 95%;
+}
+
+#root {
+    min-height: 95%;
 }
