Make basic style for sidebar and main content

--- a/src/Components/ContentMain/ContentMain.scss
+++ b/src/Components/ContentMain/ContentMain.scss
@@ -1,5 +1,9 @@
 #content-main {
-    background: aqua;
+    background: #ffffff;
     height: 90vh;
     padding: 16px;
+
+    p {
+        margin: 0;
+    }
 }
