--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,7 +1,8 @@
 #header {
-    margin-top: 32px;
-    padding: 8px;
+    margin-top: 64px;
+    padding: 16px;
+    margin-left: 256px;
     h1 {
-        margin: 2px;
+        margin: 0px;
     }
 }
