Folder listing is working Make component for Folder & FOlderItem

--- a/src/Components/ContentMain/ContentMain.scss
+++ b/src/Components/ContentMain/ContentMain.scss
@@ -1,7 +1,8 @@
-    #content-main {
-        background: #ffffff;
-	height: 90vh;
+#content-main {
+    background: black;
+    height: 90vh;
 	padding: 16px;
+    color: white;
 
 	p {
 		margin: 0;
