--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,3 +1,4 @@
+@import '../../Stylesheets/variables';
 #sidebar {
     position: absolute;
     top: 0;
@@ -5,7 +6,7 @@
     width: 240px;
     padding: 16px;
     padding-top: 40px;
-    background: #575757;
+    background: $secondary;
     color: #ffffff;
     height: 100vh;
 
