--- a/src/Stylesheets/App.scss
+++ b/src/Stylesheets/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap');
+@import 'variables';
 
 * {
 	box-sizing: border-box;
@@ -13,7 +14,7 @@ html {
 body {
 	font-family: 'Noto Sans JP', sans-serif;
     min-height: 95%;
-    background-color: black;
+    background-color: $primary;
 }
 
 #root {
