--- a/src/Components/FolderItem/FolderItem.scss
+++ b/src/Components/FolderItem/FolderItem.scss
@@ -1,5 +1,8 @@
 .folder-item {
     &:hover {
+        cursor: pointer;
+    }
+    &.selected {
         background: white;
         color: black;
     }
