--- a/src/Components/Folder/Folder.scss
+++ b/src/Components/Folder/Folder.scss
@@ -2,5 +2,6 @@
     display: grid;
     align-items: center;
     place-items: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 100%;
+    grid-template-columns: 160px 160px 160px  160px;
 }
