--- a/src/Components/FolderItem/FolderItem.scss
+++ b/src/Components/FolderItem/FolderItem.scss
@@ -1,4 +1,5 @@
 .folder-item {
+    padding: 8px;
     &:hover {
         cursor: pointer;
     }
@@ -6,7 +7,10 @@
         background: white;
         color: black;
     }
-    h1, h3 {
-        text-align: center;
+    img { width: 72px }
+    h4 { 
+        font-size: 0.85em; 
+        margin: 8px 0 0 0;
     }
+    text-align: center;
 }
