--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,4 +1,5 @@
 @import '../../Stylesheets/variables';
+
 #sidebar {
     position: absolute;
     top: 0;
@@ -7,6 +8,7 @@
     padding: 16px;
     padding-top: 40px;
     background: $secondary;
+    box-shadow: 0px 1px 4px $accent;
     color: #ffffff;
     height: 100vh;
 
