Fix folder item layout

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,9 +1,10 @@
 @import '../../Stylesheets/variables';
 
 #sidebar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 240px;
     padding: 16px;
     padding-top: 40px;
