--- a/src/Components/Folder/Folder.scss
+++ b/src/Components/Folder/Folder.scss
@@ -3,5 +3,5 @@
     align-items: center;
     place-items: center;
     width: 100%;
-    grid-template-columns: 160px 160px 160px  160px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
