Don't really like the style still searching for theme todo create themeing system maybe

--- a/src/Stylesheets/_variables.scss
+++ b/src/Stylesheets/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #202040;
-$secondary: #543864;
+$primary: #383838;
+$secondary: #000000;
 $terniary: #ffbd69;
-$accent: #ff6363;
+$accent: #ffffff;
