Adjusting sidebar style and resetting themes

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -9,7 +9,7 @@
 	padding: 16px;
 	padding-top: 40px;
 	background: $secondary;
-	color: #ffffff;
+	color: $textColor;
 	height: 100vh;
 
 	.content {
